<resources>
    <string name="app_name">Pay4Me</string>
    <string name="title_activity_home">Pay4Me</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="signup">signup</string>
    <string name="sign">Sign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_msg">Fail to Ocr Passport</string>
    <string name="male">Male</string>
    <string name="femal">Femal</string>
    <string name="first_name">First Name</string>
    <string name="passport_id">Passport Id</string>
    <string name="age">Age</string>
    <string name="rationale_message">we need permission for read <b>Camera</b>,<b>make phone calls</b>and find your <b>location</b></string>
    <string name="rationale_title">Permission required</string>
    <string name="Permission_denied_title">Permission denied</string>
    <string name="permission_settings_msg">"If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]"</string>
    <string name="openSettings">Settings</string>
    <string name="my_location">My Location </string>
    <string name="next_add">Continoue</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">Log in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_scan">Scan</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_packages">Packages</string>
    <string name="title_nearby">Nearby</string>
    <string name="skip">skip</string>
    <string name="country_prompt">Choose a country</string>

    <string-array name="spinner_coutries">
        <item>Egypt</item>
        <item>Saudi Arabia</item>
        <item> Malaysia</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>
</resources>
