<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">




        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_below="@+id/login_icon"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="fitXY"

                android:src="@drawable/user_icon" />

            <EditText
                android:id="@+id/user_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/user_name"
                app:backgroundTint="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:textCursorDrawable="@null"
                android:inputType="text"
                android:nextFocusDown="@+id/user_pass_edit"
                android:singleLine="true"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/email_layout"
            android:layout_centerVertical="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_bg"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/pass_icon" />

            <EditText
                android:id="@+id/user_pass_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:theme="@style/Autocomplete"
                app:backgroundTint="@android:color/transparent"
                android:backgroundTint="@android:color/transparent"
                android:padding="10dp"
                android:textCursorDrawable="@null"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/login_submit"
                android:singleLine="true"
                 />
        </LinearLayout>
        <TextView
            android:id="@+id/login_btn"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rounded_bg" />
    </LinearLayout>


</RelativeLayout>